@@ -61,6 +61,7 @@ setup(
             'minitage.plone3 = minitage.paste.projects.plone3:Template',
             'minitage.profils.env = minitage.paste.profils.env:Template',
             'minitage.profils.postgresql = minitage.paste.profils.postgresql:Template',
+            'minitage.profils.openldap = minitage.paste.profils.openldap:Template',
             'minitage.profils.varnish = minitage.paste.profils.varnish:Template',
             'minitage.profils.varnish2 = minitage.paste.profils.varnish2:Template',
             'minitage.profils.paste-initd = minitage.paste.profils.pasteinitd:Template',
